@@ -1,9 +1,6 @@
 package com.flipkart.varadhi.db;
 
-import com.flipkart.varadhi.entities.Org;
-import com.flipkart.varadhi.entities.Project;
-import com.flipkart.varadhi.entities.Team;
-import com.flipkart.varadhi.entities.VaradhiTopic;
+import com.flipkart.varadhi.entities.*;
 import com.flipkart.varadhi.entities.auth.ResourceType;
 import com.flipkart.varadhi.entities.auth.RoleBindingNode;
 import com.flipkart.varadhi.spi.db.MetaStore;
@@ -13,10 +10,9 @@ import org.apache.curator.framework.CuratorFramework;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.flipkart.varadhi.db.ZNode.*;
-import static com.flipkart.varadhi.entities.MetaStoreEntity.NAME_SEPARATOR;
+import static com.flipkart.varadhi.entities.VersionedEntity.NAME_SEPARATOR;
 
 
 @Slf4j
@@ -32,8 +28,8 @@ public class VaradhiMetaStore implements MetaStore, RoleBindingMetaStore {
         ensureEntityTypePathExists(ORG);
         ensureEntityTypePathExists(TEAM);
         ensureEntityTypePathExists(PROJECT);
-        ensureEntityTypePathExists(TOPIC_RESOURCE);
-        ensureEntityTypePathExists(VARADHI_TOPIC);
+        ensureEntityTypePathExists(TOPIC);
+        ensureEntityTypePathExists(SUBSCRIPTION);
         ensureEntityTypePathExists(ROLE_BINDING);
     }
 
@@ -169,36 +165,84 @@ public class VaradhiMetaStore implements MetaStore, RoleBindingMetaStore {
 
 
     @Override
-    public List<String> getVaradhiTopicNames(String projectName) {
+    public List<String> getTopicNames(String projectName) {
         String projectPrefixOfTopicName = projectName + NAME_SEPARATOR;
-        ZNode znode = ZNode.OfEntityType(VARADHI_TOPIC);
+        ZNode znode = ZNode.OfEntityType(TOPIC);
         return zkMetaStore.listChildren(znode)
                 .stream()
                 .filter(name -> name.contains(projectPrefixOfTopicName))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public void createVaradhiTopic(VaradhiTopic varadhiTopic) {
-        ZNode znode = ZNode.OfVaradhiTopic(varadhiTopic.getName());
-        zkMetaStore.createZNodeWithData(znode, varadhiTopic);
+    public void createTopic(VaradhiTopic topic) {
+        ZNode znode = ZNode.OfTopic(topic.getName());
+        zkMetaStore.createZNodeWithData(znode, topic);
     }
 
     @Override
-    public boolean checkVaradhiTopicExists(String varadhiTopicName) {
-        ZNode znode = ZNode.OfVaradhiTopic(varadhiTopicName);
+    public boolean checkTopicExists(String topicName) {
+        ZNode znode = ZNode.OfTopic(topicName);
         return zkMetaStore.zkPathExist(znode);
     }
 
     @Override
-    public VaradhiTopic getVaradhiTopic(String varadhiTopicName) {
-        ZNode znode = ZNode.OfVaradhiTopic(varadhiTopicName);
+    public VaradhiTopic getTopic(String topicName) {
+        ZNode znode = ZNode.OfTopic(topicName);
         return zkMetaStore.getZNodeDataAsPojo(znode, VaradhiTopic.class);
     }
 
     @Override
-    public void deleteVaradhiTopic(String varadhiTopicName) {
-        ZNode znode = ZNode.OfVaradhiTopic(varadhiTopicName);
+    public void deleteTopic(String topicName) {
+        ZNode znode = ZNode.OfTopic(topicName);
+        zkMetaStore.deleteZNode(znode);
+    }
+
+    @Override
+    public List<String> getAllSubscriptionNames() {
+        ZNode znode = ZNode.OfEntityType(SUBSCRIPTION);
+        return zkMetaStore.listChildren(znode)
+                .stream()
+                .toList();
+    }
+
+    @Override
+    public List<String> getSubscriptionNames(String projectName) {
+        String projectPrefix = projectName + NAME_SEPARATOR;
+        ZNode znode = ZNode.OfEntityType(SUBSCRIPTION);
+        return zkMetaStore.listChildren(znode)
+                .stream()
+                .filter(name -> name.contains(projectPrefix))
+                .toList();
+    }
+
+    @Override
+    public void createSubscription(VaradhiSubscription subscription) {
+        ZNode znode = ZNode.ofSubscription(subscription.getName());
+        zkMetaStore.createZNodeWithData(znode, subscription);
+    }
+
+    @Override
+    public VaradhiSubscription getSubscription(String subscriptionName) {
+        ZNode znode = ZNode.ofSubscription(subscriptionName);
+        return zkMetaStore.getZNodeDataAsPojo(znode, VaradhiSubscription.class);
+    }
+
+    @Override
+    public int updateSubscription(VaradhiSubscription subscription) {
+        ZNode znode = ZNode.ofSubscription(subscription.getName());
+        return zkMetaStore.updateZNodeWithData(znode, subscription);
+    }
+
+    @Override
+    public boolean checkSubscriptionExists(String subscriptionName) {
+        ZNode znode = ZNode.ofSubscription(subscriptionName);
+        return zkMetaStore.zkPathExist(znode);
+    }
+
+    @Override
+    public void deleteSubscription(String subscriptionName) {
+        ZNode znode = ZNode.ofSubscription(subscriptionName);
         zkMetaStore.deleteZNode(znode);
     }
 
